--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -53,6 +53,11 @@ jobs:
         working-directory: ./src/github.com/openshift-knative/hack
         # Use master, see https://github.com/peter-evans/create-pull-request/issues/2108
         run: make generate-ci-no-clean ARGS=--branch=master
+      - name: Auth status
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
+        env:
+          GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+        run: gh auth status
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         env:
