--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -48,32 +48,21 @@ jobs:
       - name: Configure Git user
         run: |
           git config --global user.email "serverless-support@redhat.com"
-          git config --global user.name "OpenShift Serverless"
+          git config --global user.name "serverless-qe"
       - name: Generate CI
         working-directory: ./src/github.com/openshift-knative/hack
-        # Use master, see https://github.com/peter-evans/create-pull-request/issues/2108
         run: make generate-ci-no-clean ARGS=--branch=master
-      - name: Auth login
-        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
-        env:
-          GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
-        run: |
-          gh auth login
-          gh auth setup-git
-      - name: Auth status
-        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
-        env:
-          GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
-        run: gh auth status
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         env:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
-        run: git remote add fork https://x-access-token:${{ secrets.SERVERLESS_QE_ROBOT }}@github.com/serverless-qe/release.git && git push fork sync-serverless-ci:sync-serverless-ci -f && gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
+          GITHUB_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+        run: git remote add fork https://${{ secrets.SERVERLESS_QE_ROBOT }}@github.com/serverless-qe/release.git && git push fork sync-serverless-ci:sync-serverless-ci -f && gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
         working-directory: ./src/github.com/openshift-knative/hack/openshift/release
       - env:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+          GITHUB_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         name: '[eventing - release-next] Create Konflux PR'
-        run: git remote add fork https://x-access-token:${{ secrets.SERVERLESS_QE_ROBOT }}@github.com/serverless-qe/eventing.git && git push fork sync-konflux/release-next:sync-konflux/release-next -f && gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
+        run: git remote add fork https://${{ secrets.SERVERLESS_QE_ROBOT }}@github.com/serverless-qe/eventing.git && git push fork sync-konflux/release-next:sync-konflux/release-next -f && gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
