--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -61,6 +61,7 @@ jobs:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
           GITHUB_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
         run: |
+          set -x
           git remote add fork "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git"
           git push fork sync-serverless-ci:sync-serverless-ci -f
           gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
@@ -71,6 +72,7 @@ jobs:
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         name: '[eventing - release-next] Create Konflux PR'
         run: |
+          set -x
           git remote add fork "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/eventing.git"
           git push fork sync-konflux/release-next:sync-konflux/release-next -f
           gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
