--- a/.github/workflows/release-generate-ci-template.yaml
+++ b/.github/workflows/release-generate-ci-template.yaml
@@ -74,7 +74,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
         run: |
           set -x
-          git remote add fork "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git"
+          git remote add fork "https://github.com/serverless-qe/release.git"
           git push fork sync-serverless-ci:sync-serverless-ci -f
           gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
         working-directory: ./src/github.com/openshift-knative/hack/openshift/release
