Add token for openshift/release checkout on push
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -93,7 +93,7 @@ jobs:
           sudo chmod +x /usr/bin/yq
           sudo mv /usr/bin/yq /usr/local/bin/yq
       - name: Checkout openshift-knative/hack
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           path: ./src/github.com/openshift-knative/hack
       - name: Setup Golang
@@ -106,11 +106,20 @@ jobs:
         working-directory: ./src/github.com/openshift-knative/hack
         run: find config/*.yaml | xargs -I{} sh -c "yaml2json < {} > {}.json"
       - name: Checkout openshift/release
-        uses: actions/checkout@v3
+        if: ${{ github.event_name == 'pull_request' }}
+        uses: actions/checkout@v4
         with:
           branch: 'master'
           repository: 'openshift/release'
           path: ./src/github.com/openshift-knative/hack/openshift/release
+      - name: Checkout openshift/release
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
+        uses: actions/checkout@v4
+        with:
+          branch: 'master'
+          repository: 'openshift/release'
+          path: ./src/github.com/openshift-knative/hack/openshift/release
+          token: ${{ secrets.SERVERLESS_QE_ROBOT }}
       - name: Configure Git user
         run: |
           git config --global user.email "serverless-support@redhat.com"
