--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -136,7 +136,7 @@ jobs:
           set -x
           git remote add fork "https://github.com/serverless-qe/release.git"
           git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git" sync-serverless-ci:sync-serverless-ci -f
-          gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose
+          gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift/release
       - env:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
@@ -147,5 +147,5 @@ jobs:
           set -x
           git remote add fork "https://github.com/serverless-qe/eventing.git"
           git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/eventing.git" sync-konflux/release-next:sync-konflux/release-next -f
-          gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose
+          gh pr create --base main --head serverless-qe:sync-konflux/release-next --fill-verbose || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/eventing
