--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1
 kind: PipelineRun
 metadata:
   annotations:
-    build.appstudio.openshift.io/repo: https://github.com/openshift-knative/serverless-operator?rev={{revision}}
+    build.appstudio.openshift.io/repo: https://github.com/{{{ .ReleaseBuildConfiguration.Metadata.Org }}}/{{{ .ReleaseBuildConfiguration.Metadata.Repo }}}?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
     {{{- if eq .Event "pull_request" }}}
     build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
@@ -13,10 +13,10 @@ metadata:
       == "{{{ .ReleaseBuildConfiguration.Metadata.Branch }}}"
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: {{{ truncate ( sanitize .ApplicationName ) }}}
-    appstudio.openshift.io/component: {{{ truncate ( sanitize .ProjectDirectoryImageBuildStepConfiguration.To ) }}}
+    appstudio.openshift.io/application: {{{ truncate ( sanitize .ApplicationName ) }}}-{{{ .ReleaseBuildConfiguration.Metadata.Branch }}}
+    appstudio.openshift.io/component: {{{ truncate ( sanitize ( print .ProjectDirectoryImageBuildStepConfiguration.To "-" .ReleaseBuildConfiguration.Metadata.Branch ) ) }}}
     pipelines.appstudio.openshift.io/type: build
-  name: {{{ truncate ( sanitize ( print .ApplicationName "-" .ProjectDirectoryImageBuildStepConfiguration.To ) ) }}}-on-{{{ .Event }}}
+  name: {{{ truncate ( sanitize ( print .ProjectDirectoryImageBuildStepConfiguration.To "-" .ReleaseBuildConfiguration.Metadata.Branch ) ) }}}-on-{{{ .Event }}}
   namespace: ocp-serverless-tenant
 spec:
   params:
