--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -129,7 +129,7 @@ jobs:
         env:
           QCI_TOKEN: ${{ secrets.QCI_TOKEN }}
         run: |
-          podman login -u=image-puller -p=${QCI_TOKEN} quay-proxy.ci.openshift.org
+          podman login -u=image-puller -p="${QCI_TOKEN}" quay-proxy.ci.openshift.org
           make generate-ci-no-clean ARGS=--branch=master
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
