Authenticate QCI registry quay-proxy.ci.openshift.org (#183)
* Authenticate QCI registry quay-proxy.ci.openshift.org

* Quote the token

* Update readme with info about accessing QCI registry

* Simplify readme

--- a/.github/workflows/release-generate-ci-template.yaml
+++ b/.github/workflows/release-generate-ci-template.yaml
@@ -75,7 +75,11 @@ jobs:
 
       - name: Generate CI
         working-directory: ./src/github.com/openshift-knative/hack
-        run: make generate-ci-no-clean ARGS=--branch=master
+        env:
+          QCI_TOKEN: ${{ secrets.QCI_TOKEN }}
+        run: |
+          podman login -u=image-puller -p="${QCI_TOKEN}" quay-proxy.ci.openshift.org
+          make generate-ci-no-clean ARGS=--branch=master
 
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
