--- a/.github/workflows/release-generate-ci.yaml
+++ b/.github/workflows/release-generate-ci.yaml
@@ -126,11 +126,7 @@ jobs:
           git config --global user.name "serverless-qe"
       - name: Generate CI
         working-directory: ./src/github.com/openshift-knative/hack
-        env:
-          QCI_TOKEN: ${{ secrets.QCI_TOKEN }}
-        run: |
-          podman login -u=image-puller -p="${QCI_TOKEN}" quay-proxy.ci.openshift.org
-          make generate-ci-no-clean ARGS=--branch=master
+        run: make generate-ci-no-clean ARGS=--branch=master
       - name: Create Pull Request
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         env:
