--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -1,8 +1,5 @@
 config:
   branches:
-    release-v1.10:
-      openShiftVersions:
-      - version: "4.15"
     release-v1.11:
       openShiftVersions:
       - skipCron: true
@@ -20,6 +17,11 @@ config:
       - version: "4.15"
       - onDemand: true
         version: "4.12"
+    release-v1.15:
+      openShiftVersions:
+        - version: "4.15"
+        - onDemand: true
+          version: "4.12"
 repositories:
 - dockerfiles: {}
   ignoreConfigs: {}
