--- a/config/serving.yaml
+++ b/config/serving.yaml
@@ -1,6 +1,8 @@
 config:
   branches:
     release-next:
+      konflux:
+        enabled: true
       openShiftVersions:
       - version: "4.15"
       - onDemand: true
