--- a/pkg/project/testoutput/openshift/images.yaml
+++ b/pkg/project/testoutput/openshift/images.yaml
@@ -1,5 +1,6 @@
 github.com/openshift-knative/hack/cmd/discover: registry.ci.openshift.org/openshift/knative-discover:main
 github.com/openshift-knative/hack/cmd/generate: hello
+github.com/openshift-knative/hack/cmd/konflux-apply: registry.ci.openshift.org/openshift/knative-konflux-apply:main
 github.com/openshift-knative/hack/cmd/prowcopy: registry.ci.openshift.org/openshift/knative-prowcopy:main
 github.com/openshift-knative/hack/cmd/prowgen: registry.ci.openshift.org/openshift/knative-prowgen:main
 github.com/openshift-knative/hack/cmd/sobranch: registry.ci.openshift.org/openshift/knative-sobranch:main
