Debug run command repository
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/.github/workflows/run-command-repository.yaml
+++ b/.github/workflows/run-command-repository.yaml
@@ -65,3 +65,10 @@ jobs:
           delete-branch: true
           body: |
             Run `make ${{ inputs.command }}` using openshift-knative/hack.
+
+      - name: Debug
+        if: always()
+        working-directory: "./src/github.com/${{ inputs.repository }}"
+        run: |
+          tree
+          git --no-pager diff
