Switch to non oci-ta docker build pipeline

--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -36,7 +36,7 @@ spec:
     - name: revision
       value: '{{revision}}'
   pipelineRef:
-    name: docker-build-oci-ta
+    name: docker-build
   taskRunTemplate: {}
   workspaces:
     - name: workspace
