Enable Konflux for eventing 1.15 components

--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -28,6 +28,8 @@ config:
       - onDemand: true
         version: "4.12"
     release-v1.15:
+      konflux:
+        enabled: true
       openShiftVersions:
       - version: "4.15"
       - onDemand: true
