--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -27,6 +27,8 @@ config:
       - version: "4.15"
       - version: "4.12"
     release-v1.15:
+      konflux:
+        enabled: true
       openShiftVersions:
       - version: "4.15"
       - version: "4.12"
