--- a/.github/workflows/release-discover-branches.yaml
+++ b/.github/workflows/release-discover-branches.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Generate Action
         working-directory: ./src/github.com/openshift-knative/hack
-        run: make generate-action
+        run: make generate-ci-action
 
       - name: Create Discovery Pull Request
         if: (github.event_name == 'push' || github.event_name == 'workflow_dispatch') && github.ref_name == 'main'
