--- a/.github/workflows/release-generate-ci-template.yaml
+++ b/.github/workflows/release-generate-ci-template.yaml
@@ -77,7 +77,7 @@ jobs:
         working-directory: ./src/github.com/openshift-knative/hack
         run: make generate-ci-no-clean ARGS=--branch=master
 
-      - name: Create Pull Request
+      - name: Create Pull Request - openshift/release
         if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
         env:
           GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
@@ -88,3 +88,16 @@ jobs:
           git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/release.git" sync-serverless-ci:sync-serverless-ci -f
           gh pr create --base master --head serverless-qe:sync-serverless-ci --fill-verbose || true
         working-directory: ./src/github.com/openshift-knative/hack/openshift/release
+
+      - name: Create Pull Request - openshift-knative/hack
+        if: ${{ (github.event_name == 'push' || github.event_name == 'workflow_dispatch' || github.event_name == 'schedule') && github.ref_name == 'main' }}
+        env:
+          GH_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+          GITHUB_TOKEN: ${{ secrets.SERVERLESS_QE_ROBOT }}
+        run: |
+          set -x
+          git remote add fork "https://github.com/serverless-qe/hack.git"
+          git push "https://serverless-qe:${GH_TOKEN}@github.com/serverless-qe/hack.git" sync-konflux/main:sync-konflux/main -f
+          gh pr create --base main --head serverless-qe:sync-konflux/main --fill-verbose || true
+        # Use the repository cloned by the prowgen tool
+        working-directory: ./src/github.com/openshift-knative/hack/openshift-knative/hack
