--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -1,6 +1,6 @@
 # DO NOT EDIT! Generated Dockerfile for {{.main}}.
 ARG GO_BUILDER={{.builder}}
-ARG UBI8_MINIMAL=registry.access.redhat.com/ubi8/ubi-minimal
+ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
 ARG VERSION={{.version}}
 
 FROM $GO_BUILDER as builder
@@ -12,9 +12,9 @@ ENV GOEXPERIMENT=strictfipsruntime
 
 RUN go build -tags strictfipsruntime -o /usr/bin/main ./{{.main}}
 
-FROM $UBI8_MINIMAL
+FROM $GO_RUNTIME
 
-# Install the missing zoneinfo to ubi-minimal
+# Install zoneinfo.
 RUN microdnf install tzdata
 
 USER 65532
