Make the ARG available to the second stage
It can't be at the beginning because the second stage of the multi-stage
docker build won't see the arg.

--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
@@ -1,7 +1,6 @@
 # DO NOT EDIT! Generated Dockerfile for cmd/discover.
 ARG GO_BUILDER=registry.ci.openshift.org/openshift/release:rhel-8-release-golang-1.21-openshift-4.17
 ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
-ARG VERSION=main
 
 FROM $GO_BUILDER as builder
 
@@ -14,6 +13,8 @@ RUN go build -tags strictfipsruntime -o /usr/bin/main ./cmd/discover
 
 FROM $GO_RUNTIME
 
+ARG VERSION=main
+
 # Install zoneinfo.
 RUN microdnf install tzdata
 
@@ -24,7 +25,7 @@ COPY --from=builder /usr/bin/main /usr/bin/main
 LABEL \
       com.redhat.component="openshift-serverless-1-knative-discover-rhel8-container" \
       name="openshift-serverless-1/knative-discover-rhel8" \
-      version="$VERSION" \
+      version=$VERSION \
       summary="Red Hat OpenShift Serverless 1 Knative Discover" \
       maintainer="serverless-support@redhat.com" \
       description="Red Hat OpenShift Serverless 1 Knative Discover" \
