--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -1,7 +1,6 @@
 # DO NOT EDIT! Generated Dockerfile for {{.main}}.
 ARG GO_BUILDER={{.builder}}
 ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
-ARG VERSION={{.version}}
 
 FROM $GO_BUILDER as builder
 
@@ -14,6 +13,8 @@ RUN go build -tags strictfipsruntime -o /usr/bin/main ./{{.main}}
 
 FROM $GO_RUNTIME
 
+ARG VERSION={{.version}}
+
 # Install zoneinfo.
 RUN microdnf install tzdata
 
@@ -24,7 +25,7 @@ COPY --from=builder /usr/bin/main /usr/bin/main
 LABEL \
       com.redhat.component="openshift-serverless-1-{{.project_dashcase}}-{{.component_dashcase}}-rhel8-container" \
       name="openshift-serverless-1/{{.project_dashcase}}-{{.component_dashcase}}-rhel8" \
-      version="$VERSION" \
+      version=$VERSION \
       summary="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
       maintainer="serverless-support@redhat.com" \
       description="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
