Exclude 'rosa' configurations from konfluxgen for SO
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -3,6 +3,8 @@ config:
     main:
       konflux:
         enabled: true
+        excludes:
+          - ".*rosa.*"
         fbcImages:
         - .*serverless-index.*
       openShiftVersions:
