Read version label from serverless-operator project.yaml

--- a/pkg/konfluxgen/docker-build.yaml
+++ b/pkg/konfluxgen/docker-build.yaml
@@ -93,7 +93,7 @@ spec:
     description: Build a source image.
     name: build-source-image
     type: string
-  - default: []
+  - default: ["VERSION={{{ .VersionLabel }}}"]
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
     type: array
