Generate build-args from image overrides and version

--- a/pkg/konfluxgen/docker-build.yaml
+++ b/pkg/konfluxgen/docker-build.yaml
@@ -93,7 +93,14 @@ spec:
     description: Build a source image.
     name: build-source-image
     type: string
-  - default: ["VERSION={{{ .VersionLabel }}}"]
+  {{{- $buildArgsN := len .BuildArgs }}} {{{ if ne $buildArgsN 0 }}}
+  - default:
+    {{{- range $arg := .BuildArgs }}}
+    - "{{{- $arg }}}"
+    {{{- end }}}
+  {{{- else }}}
+  - default: []
+  {{{- end }}}
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
     type: array
