Use production-ready Dockerfile template for Go images (#220)
* Replacement working for golang builder and ubi-minimal

* Use ARG for go builder and ubi minimal

* Fill in LABEL for images automatically

* Reuse code

* Replace also hyphen

* Update test Dockerfiles

* Include just one Dockerfile in unit-tests to reduce duplication

* Use the builder image defined in Dockerfile

Rather than hardcoding it in Go code.

* Apply overrides also to pullspecs from ARG

* Use GO_RUNTIME instead of UBIx_MINIMAL

* Fix unit test

* Make the ARG available to the second stage

It can't be at the beginning because the second stage of the multi-stage
docker build won't see the arg.

* Read version label from serverless-operator project.yaml

* Fix error message

--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -1,20 +1,34 @@
 # DO NOT EDIT! Generated Dockerfile for {{.main}}.
-FROM {{.builder}} as builder
+ARG GO_BUILDER={{.builder}}
+ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
+
+FROM $GO_BUILDER as builder
 
 COPY . .
 
-RUN mkdir -p /var/run/ko && \
-    mkdir -p {{.main}}/kodata && \
-    go build -o /usr/bin/main ./{{.main}} && \
-    cp -r {{ .main }}/kodata /var/run/ko
+ENV CGO_ENABLED=1
+ENV GOEXPERIMENT=strictfipsruntime
 
-FROM registry.access.redhat.com/ubi8/ubi-minimal
+RUN go build -tags strictfipsruntime -o /usr/bin/main ./{{.main}}
 
-# install the missing zoneinfo to ubi-minimal
+FROM $GO_RUNTIME
+
+ARG VERSION={{.version}}
+
+# Install zoneinfo.
 RUN microdnf install tzdata
 
 USER 65532
 
 COPY --from=builder /usr/bin/main /usr/bin/main
-COPY --from=builder /var/run/ko /var/run/ko
+
+LABEL \
+      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}-{{.component_dashcase}}-rhel8-container" \
+      name="openshift-serverless-1/{{.project_dashcase}}-{{.component_dashcase}}-rhel8" \
+      version=$VERSION \
+      summary="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
+      maintainer="serverless-support@redhat.com" \
+      description="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
+      io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}"
+
 ENTRYPOINT ["/usr/bin/main"]
