--- a/cmd/generate/Dockerfile.template
+++ b/cmd/generate/Dockerfile.template
@@ -23,12 +23,12 @@ USER 65532
 COPY --from=builder /usr/bin/main /usr/bin/main
 
 LABEL \
-      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}-{{.component_dashcase}}-rhel8-container" \
-      name="openshift-serverless-1/{{.project_dashcase}}-{{.component_dashcase}}-rhel8" \
+      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}{{.component_dashcase}}-rhel8-container" \
+      name="openshift-serverless-1/{{.project_dashcase}}{{.component_dashcase}}-rhel8" \
       version=$VERSION \
-      summary="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
+      summary="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       maintainer="serverless-support@redhat.com" \
-      description="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}" \
-      io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}} {{.component}}"
+      description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
+      io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}"
 
 ENTRYPOINT ["/usr/bin/main"]
