Fix syntax to pass additional-tags
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/docker-build.yaml
+++ b/pkg/konfluxgen/docker-build.yaml
@@ -405,7 +405,7 @@ spec:
     - name: IMAGE
       value: $(tasks.build-container.results.IMAGE_URL)
     - name: ADDITIONAL_TAGS
-      value: $(params.additional-tags)
+      value: $(params.additional-tags[*])
     runAfter:
     - build-container
     taskRef:
